--- a/event-management-frontend/render.yaml
+++ b/event-management-frontend/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: utsavmunch-frontend
     env: node
-    buildCommand: npm install && npm run build
+    buildCommand: npm install && npm install -g vite && npm run build
     startCommand: npm run preview
     envVars:
       - key: VITE_API_URL
